# solark-cloud-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: aws-profile-map.json  catalog-entry.json  devcontainer.json  project-setup.sh
.githooks/: pre-push
docs/examples/: month-daily-with-values.html  month-summary-with-values.html  year-basic.html  year-with-values.html
src/solark_cloud_cli/: config.py  main.py
src/solark_cloud_cli/client/: __init__.py  auth.py  endpoints.py  http_client.py
src/solark_cloud_cli/commands/: config.py  energy.py
src/solark_cloud_cli/formatters/: __init__.py  base.py  csv_formatter.py  html_formatter.py  json_formatter.py  table_formatter.py
src/solark_cloud_cli/models/: __init__.py  api_responses.py  auth.py  energy.py
src/solark_cloud_cli/services/: __init__.py  config_service.py  energy_service.py  valuation_service.py
tests/: conftest.py
tests/integration/: test_config_commands.py  test_energy_commands.py
tests/unit/: test_config.py
tests/unit/client/: test_auth.py  test_endpoints.py  test_http_client.py
tests/unit/formatters/: test_csv_formatter.py  test_html_formatter.py  test_json_formatter.py  test_table_formatter.py
tests/unit/models/: test_api_responses.py  test_energy.py
tests/unit/services/: test_config_service.py  test_energy_service.py  test_valuation_service.py
